# nostd

./: CMakeLists.txt  README.md  main.cc
.github/workflows/: cmake.yml
include/nostd/: util.h
include/nostd/array/: array.h
include/nostd/concepts/: concepts.h
include/nostd/function/: function.h
include/nostd/pointers/: shared_ptr.h
include/nostd/storage/: allocator_storage.h  dynamic_storage.h  local_storage.h  storage.h
include/nostd/string/: basic_string.h  string.h
src/: array.h  storage.h  util.h
tests/: CMakeLists.txt  array_test.cpp  shared_test.cpp  storage_test.cpp  test_array.cpp  test_storage.cpp  test_util.h
